# FS-Capture

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  PROJECT_RETROSPECTIVE.md  README.md  config.example.toml
VBA Captor/: .gitignore  PHASE_4C_HK_PLAN.md  README.md  STATUS.md
development/: DEVELOPMENT_BRIEF.md  build.bat  filings_atlas.spec  fs_capture.spec  pyproject.toml  requirements.txt  run.bat  version_info.txt
development/app/: main.py
development/app/core/: cache.py  http.py  incremental.py  job.py  models.py  orchestrator.py  output_paths.py  pdf_renderer.py  ratelimit.py  settings.py  sidecar.py
development/app/exporters/: __init__.py  excel_writer.py
development/app/exporters/templates/: .gitkeep  sina_v22_schema.json
development/app/ui/: batch_import_dialog.py  exchange_panel.py  exchange_selector.py  i18n.py  main_view.py  main_window.py  onboarding_dialog.py  output_card.py  period_selector.py  progress_dock.py  settings_dialog.py  strings.py  ticker_row.py
development/app/ui/styles/: __init__.py  app.qss  palette.py  qss_loader.py
development/plugins/: __init__.py  base.py
development/plugins/ashare/: __init__.py  financials.py  name_resolver.py  reports.py
development/plugins/hk/: __init__.py  _pdf_verify.py  financials.py  fiscal_year.py  name_resolver.py  reports.py
development/plugins/jp/: __init__.py  edinet_api.py  edinet_web.py  name_resolver.py  reports.py
development/plugins/kr/: __init__.py  dart_web.py  financials.py  name_resolver.py  reports.py
development/plugins/sg/: __init__.py  name_resolver.py  reports.py  sgxnet_web.py
development/plugins/tw/: __init__.py  name_resolver.py  reports.py
development/plugins/uk/: __init__.py  name_resolver.py  nsm_web.py  reports.py
development/plugins/us/: __init__.py  financials.py  name_resolver.py  reports.py
development/tests/: conftest.py  test_ashare_name_resolver.py  test_assets.py  test_batch_import.py  test_cached_or_load.py  test_hk_selection.py  test_http_client.py  test_i18n.py  test_incremental.py  test_jp_edinet_web.py  test_jp_name_resolver.py  test_jp_reports.py  test_kr_dart_web.py  test_language_switch.py  test_orchestrator.py  test_output_layout.py  test_packaging_spec.py  test_pdf_renderer_pool.py  test_perf_concurrency.py  test_playwright_pool.py  test_ratelimit.py  test_resolver_prewarm.py  test_selection_logic.py  test_settings.py  test_sg_name_resolver.py  test_sg_reports.py  test_sg_settings.py  test_sidecar.py  test_sidecar_migration.py  test_stream_resume.py  test_ticker_row.py  test_ui_strings.py  test_uk_name_resolver.py  test_uk_reports.py  test_us_paged_submissions.py
development/tests/benchmarks/: test_baseline_perf.py
development/tests/e2e/: test_smoke.py
development/tests/fixtures/: dart_ipo_454910.html  dart_search_005930.html
development/tests/integration/: test_plugins.py  test_tw_plugin.py
(+56 files in other folders)
