[project]
name = "fs-capture"
version = "0.1.0"
description = "One-click multi-market disclosure report download tool"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Eric", email = "kaiyu199602@gmail.com" }]

dependencies = [
    "PySide6>=6.8",
    "httpx[http2]>=0.27",
    "selectolax>=0.3.21",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "akshare>=1.14",
    "OpenDartReader>=0.2.2",
    "pykrx>=1.0.45",
    "sec-edgar-downloader>=5.0",
    "pydantic>=2.7",
    "tenacity>=8.2",
    "diskcache>=5.6",
    "loguru>=0.7",
    "pandas>=2.2",
    "pypdf>=4.2",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
    "playwright>=1.45",
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.6.0",
]

[project.scripts]
fs-capture = "app.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "plugins*"]

[tool.setuptools.package-data]
"app.ui.styles" = ["*.qss"]
"app.assets" = ["*.ico", "*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --strict-markers"
markers = [
    "e2e: end-to-end smoke tests requiring network",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "build", "dist", "_internal"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
# UP042: keep `class X(str, Enum)` for Pydantic v2 compatibility & explicit str-mixin semantics.
#        Conversion to StrEnum is safe but deferred — separate audit needed for downstream consumers.
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N"]
# Qt event-handler overrides (mousePressEvent, changeEvent, etc.) are camelCase by Qt API contract.
"app/ui/main_window.py" = ["N802"]
